--- a/css/cssForo.css
+++ b/css/cssForo.css
@@ -29,8 +29,9 @@ informática e internet
     width: 100%;
     height: 20%;
     background-color: #dedede;
-    margin: 0;
+    //  margin: 0;
     padding: 0;
+    padding-right: 4.5%;
 }
 #zonaLoginDesc{
     width: 100%;
@@ -50,16 +51,24 @@ input[type="text"],input[type="password"]{
 .divFoto{
     border: #cccccc 1px solid;
     background-color: white;
+    padding-bottom: 1.5%;
+}
+.divFoto img{
+    width:100%;
+    height:100%;
 }
 .col-md-5{
     padding-left: 0%;
     padding-right: 0%;
 }
 .fotoPerfil{
-    width: 90%;
+    width: 100%;
+    height: 100%;
+    padding: 0% 0%;
+   /* width: 90%;
     height: 90%;
-    padding: 5% 5%;
-    /* border-radius: 100%; */
+    padding: 5% 5%;*/
+   /*  border-radius: 100%; */
 }
 
 /* Botones Menú */
@@ -93,6 +102,33 @@ input[type="text"],input[type="password"]{
     border: 1px solid #D1D1D1;
     background: #F1F1F1;
 }
+.hiloUsuario{
+    background-color: #dedede;
+}
+.hiloComentario{
+    background: #F1F1F1;
+}
+.perfilBoton{
+    width: 100%;
+    margin: 3% 0% 2% 0%;
+}
+.perfilBoton i{
+    float: left;
+    width: 20%;
+    height: 33%;
+    padding-left: 5%;
+    padding-top: 3%;
+    font-size: 14px;
+}
+.perfilBoton form{
+    float: left;
+    width: 80%;
+    height: 33%;
+}
+.perfilBoton input{
+    margin-left: 4%;
+    width:  100%;
+}
 
 /* Estrellas para los Likes */
 .rating {
@@ -102,22 +138,26 @@ input[type="text"],input[type="password"]{
 .rating > span {
     display: inline-block;
     position: relative;
-    font-size: 65%;
+    font-size: 100%;
+    float: left;
 }
-.rating > span:hover{
-      color: gold;
+.rating > span:first-of-type:hover{
+    color: blue;
 }
-.rating > span:hover:before,
-.rating > span:hover ~ span:before {
-    content: "\2605";
-    position: absolute;
-    color: gold;
+.rating > span:nth-of-type(2):hover{
+    color: darkred;
+}
+.rating > span:nth-of-type(3):hover{
+    color: blue;
+}
+.rating > span:nth-of-type(4):hover{
+    color: darkred;
 }
 .nombreUsuario{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    background-color: lavender;
+    padding-right: 30px;
+    border-bottom:  #cccccc 1px solid;
+    margin-left: 2%;
+    text-align: center;
 }
 
 /*
