--- a/css/cssForo.css
+++ b/css/cssForo.css
@@ -29,7 +29,7 @@ informática e internet
     width: 100%;
     height: 20%;
     background-color: #dedede;
-    //  margin: 0;
+    /*  margin: 0; */
     padding: 0;
     padding-right: 4.5%;
 }
