--- a/css/cssForo.css
+++ b/css/cssForo.css
@@ -160,6 +160,12 @@ input[type="text"],input[type="password"]{
     text-align: center;
 }
 
+/* Tabla responsiva */
+@-moz-document url-prefix() {
+  fieldset { display: table-cell; }
+}
+
+
 /*
 h1{                         HAY QUE MODIFICAR EL H1 DE BOOTSTRAP
     font-size: 1.8em;
