--- a/css/cssForo.css
+++ b/css/cssForo.css
@@ -45,8 +45,11 @@ informática e internet
 input[type="text"],input[type="password"]{
     letter-spacing: 2px;
 }
-#mainMenu{
+#menu{
     background-color: red;
+}
+.activo{
+    background-color: goldenrod; 
 }
 .divFoto{
     border: #cccccc 1px solid;
@@ -65,10 +68,10 @@ input[type="text"],input[type="password"]{
     width: 100%;
     height: 100%;
     padding: 0% 0%;
-   /* width: 90%;
-    height: 90%;
-    padding: 5% 5%;*/
-   /*  border-radius: 100%; */
+    /* width: 90%;
+     height: 90%;
+     padding: 5% 5%;*/
+    /*  border-radius: 100%; */
 }
 
 /* Botones Menú */
@@ -80,7 +83,7 @@ input[type="text"],input[type="password"]{
     text-align: center;
     font-size: 1.2em;
     letter-spacing: 1px;
-
+    background-color: red;
 }
 .boton:hover{
     opacity: 0.9;
@@ -97,6 +100,12 @@ input[type="text"],input[type="password"]{
 }
 .row{
     -webkit-padding-start: 0; 
+}
+.hiloCelda{
+    margin-top: 1%;
+    margin-bottom: 1%;
+    border-left: 4px solid red;
+    border-right: 4px solid red;
 }
 .creadorHilo{
     border: 1px solid #D1D1D1;
@@ -160,9 +169,39 @@ input[type="text"],input[type="password"]{
     text-align: center;
 }
 
+/* Zona Registro */ 
+.contenedorRegistro{
+    margin-top: 2%;
+    background-color: green;
+    width: 60%;
+    text-align: center;
+}
+.campoFormulario:nth-child(2n+1){
+    width: 20%;
+    /*text-align: center;*/
+    text-align: right;
+}
+.campoFormulario:nth-child(2n){
+    width: 78%;
+}
+.campoFormuarioInput{
+    width: 100%;
+    margin-top: 1%;
+}
+#correo, #nombre, #apellidos, #username, #password, #password2, #cumpleanios, #imagen{
+    width: 100%;
+    margin-bottom: 2%;
+}
+.titularRegistroForm{
+
+}
+.botonRegistro{
+    width: 100%;
+    margin-bottom: 1%;
+}
 /* Tabla responsiva */
 @-moz-document url-prefix() {
-  fieldset { display: table-cell; }
+    fieldset { display: table-cell; }
 }
 
 
