--- a/css/cssForo.css
+++ b/css/cssForo.css
@@ -24,12 +24,34 @@ body{
 
 /* Contenedor Principal*/
 .contenedor{
-    border: 1px solid black;
+    border: 1px solid grey;
     padding:  0.2%;
-    background-color: #CCC;
+    /*  background-color: #CCC; */
     margin-top: 1%;
     margin-bottom:  1%;
     z-index: 10;
+    background:#fff;
+    -webkit-box-shadow:0 0 40px rgba(0, 0, 0, 0.1) inset;
+    -moz-box-shadow: 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    -moz-border-radius:4px;
+    border-radius:4px;
+}
+
+/* Hilo zona creador*/
+.posicion{
+    width: 100%;
+    height: 100%;
+    display: block;
+    float: left;
+}
+.col_md-4 .hiloComentario{
+    height: 100%;
+    display: block;
+}
+#comentario{
+    background-color: #CCC;
+    border: 0.5px solid black;
 }
 
 /* Zona Usuario */
@@ -40,11 +62,15 @@ body{
     /*  margin: 0; */
     padding: 0;
     padding-right: 4.5%;
+    margin-top: 2%;
+    margin-left: 0;
 }
 #zonaLoginDesc{
     width: 100%;
     height: 20%;
     background-color: yellow;
+    margin-top: 2%;
+    margin-left: 0;
 }
 .campos{
     width: 100%;
@@ -112,9 +138,21 @@ input[type="text"],input[type="password"]{
 .hiloCelda{
     margin-top: 1%;
     margin-bottom: 1%;
-    border-left: 4px solid red;
-    border-right: 4px solid red;
+    border-left: 3px solid #ca3415;
+    border-right: 3px solid #ca3415;
+    border-top: 1px solid #D1D1D1;
+    border-bottom: 1px solid #D1D1D1;
+    background: #F1F1F1;
+    
 }
+/*
+.fa-quote-right{
+ color: #333333; /*Color del icono*
+background: #eeeeee; /*Fondo del icono*
+border: 1px solid #333333; /*Borde*
+font-size: 20px; /*Tamaño del icono*
+}
+*/
 .creadorHilo{
     border: 1px solid #D1D1D1;
     background: #F1F1F1;
@@ -122,8 +160,9 @@ input[type="text"],input[type="password"]{
 .hiloUsuario{
     background-color: #dedede;
 }
-.hiloComentario{
-    background: #F1F1F1;
+.hiloComentario:nth-child(2n){
+    border-left: 0.5px solid #D1D1D1;
+    background-color: #dedede;
 }
 .perfilBoton{
     width: 100%;
@@ -180,14 +219,14 @@ input[type="text"],input[type="password"]{
 /* Zona Registro */ 
 .contenedorRegistro{
     margin-top: 10%;
-    margin-left: 67%;
+    margin-left: 27%;
     background-color: graytext;
-    width: 35%;
+    width: 35%; 
     height: 100%;
     text-align: center;
     /*   margin-left: auto;
        margin-right: auto; */
-    color: white;
+    color: golden;
 }
 .fondoCrearHilo{
     background-image: url(../images/wallhaven-383981.jpg);
@@ -226,6 +265,9 @@ input[type="text"],input[type="password"]{
     fieldset { display: table-cell; }
 }
 
+.tablaHilos{
+    margin: 0 1%;
+}
 
 /*
 h1{                         HAY QUE MODIFICAR EL H1 DE BOOTSTRAP
