--- a/css/cssHeader.css
+++ b/css/cssHeader.css
@@ -18,7 +18,6 @@ and open the template in the editor.
 	color: #ffffff;
 	box-sizing: border-box;
 	top:-100px;
-
 	-webkit-transition:top 0.3s;
 	transition:top 0.3s;
 }
@@ -149,5 +148,5 @@ body.fixed .header-fixed .header-limiter nav {
 body {
 	margin: 0;
 	padding: 0;
-	height: 1500px;
+	/*height: 1500px;*/
 }
